<resources>
    <string name="app_name">Randomise game</string>
    <string name="try_it">Try It!!</string>
    <string name="type_your_answer">TYPE YOUR ANSWER</string>
    <string name="guess_the_number_between_0_and_20">Guess the number\n between 0 and 20</string>
    <string name="_10_chances">[10 chances]</string>
    <string name="start">START GAME</string>
    <string name="play">PLAY</string>
    <string name="guess">GUESS</string>
    <string name="roll">ROLL</string>
</resources>
